# supermarket-catalog

./: .gitignore  CMakeLists.txt  Makefile  README.md  supermarket_catalog
data/: avl_tree.dot  b_plus_tree.dot  b_tree.dot  productosCorrectos.csv  products_1000.csv
docs/: report.md  user_manual.md
docs/diagrams/: class_diagram.puml  tad_avl.puml  tad_baselinkedlist.puml  tad_bplustree.puml  tad_btree.puml  tad_hash.puml
docs/images/tests/: avl_tree.dot  b_plus_tree.dot  b_tree.dot
include/models/: Product.h
include/services/: CatalogService.h
include/structures/: AVLTree.h  BPlusTree.h  BTree.h  BaseLinkedList.h  HashTable.h  LinkedList.h  ListNode.h  OrderedLinkedList.h  UnorderedLinkedList.h
include/utils/: CSVLoader.h
src/: main.cpp
src/services/: CatalogService.cpp
src/structures/: AVLTree.cpp  BPlusTree.cpp  BTree.cpp  BaseLinkedList.cpp  HashTable.cpp  LinkedList.cpp  OrderedLinkedList.cpp  UnorderedLinkedList.cpp
src/utils/: CSVLoader.cpp
